# BetEdge

./: .dockerignore  .env.example  LICENSE  README.md  TODO.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  TODO  (+3 more)
scrappers/: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  main_scrape.py  pyproject.toml  url_scrape.py
scrappers/.github/workflows/: build_and_test.yml
scrappers/db/: .env.example  db.py  db_example.py
scrappers/db/sql/: add_test_data.sql  create_schema.sql  delete_schema.sql
scrappers/db_helper_scripts/: db_clean.py  db_load_sample_urls.py  db_select_all.py
scrappers/handlers/: scrapper_event_handler.py
scrappers/init_sql_scripts/: add_test_data.sql
scrappers/matchers/: event_matcher.py
scrappers/notifiers/: email_notifier.py  notifier_interface.py
scrappers/schedulers/: scheduler.py
scrappers/scrappers/: betshop_scrapper.py  betsson_scrapper.py  novibet_scrapper.py  scrapper_interface.py  scrapper_manager.py  stoixoiman_scrapper.py
scrappers/scrappers/configs/: betshop_config.py  betsson_config.py  general_scrapper_configs.py  novibet_config.py  stoiximan_config.py
scrappers/standardizers/: date_standardizer.py  option_title_standardizer.py
scrappers/tests/: test_db.py  test_standardization.py
scrappers/urls/: __init__.py  betshop_url_scrapper.py  betsson_url_scrapper.py  novibet_url_scrapper.py  scrapper_url_loader.py  stoiximan_url_scrapper.py  url_scrapper_configs.py  url_scrapper_manager.py
scrappers/urls/legacy/: event_url_scrapper.py  league_url_scrapper.py
(+26 files in other folders)
